main rebased on br_project

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changes/01.1-create-roles-table.yaml
   - include:
       file: db/changelog/changes/01.2-create-users-roles-table.yaml
+  - include:
+      file: db/changelog/changes/02-create-projects-table.yaml
