--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,1 @@
-url=jdbc:mysql://localhost:3306/task_management_app?serverTimezone=UTC
-username=root
-password=1234
-changelog-file= /db/changelog/db.changelog-master.yaml
+changelog-file=src/main/resources/db/changelog/db.changelog-master.yaml
