--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from com.example.taskmanagementsystem.repository -->
     </parent>
     <groupId>com.example</groupId>
     <artifactId>task-management-system</artifactId>
@@ -18,7 +18,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
-        <liquibase.version>4.25.0</liquibase.version>
+        <liquibase.version>4.20.0</liquibase.version>
         <spring.boot.starter.version>3.2.1</spring.boot.starter.version>
     </properties>
     <dependencies>
@@ -85,7 +85,6 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>${liquibase.version}</version>
         </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
