--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,18 @@
     <description>task-management-system</description>
     <properties>
         <java.version>17</java.version>
-        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <version.mapstruct>1.5.5.Final</version.mapstruct>
         <lombok.mapstruct.binding.version>0.2.0</lombok.mapstruct.binding.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
         <liquibase.version>4.20.0</liquibase.version>
         <spring.boot.starter.version>3.2.1</spring.boot.starter.version>
+        <jjwt.version>0.11.5</jjwt.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -166,7 +171,7 @@
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>${mapstruct.version}</version>
+                            <version>${version.mapstruct}</version>
                         </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
